# HWMio

./: CMakeLists.txt  CpuTemperatureWidget.cpp  CpuTemperatureWidget.h  GpuInfoWidget.cpp  GpuInfoWidget.h  GpuOverclockWidget.cpp  GpuOverclockWidget.h  MainWindow.cpp  MainWindow.h  README.md  SystemInfoWidget.cpp  SystemInfoWidget.h  com.example.hwminfo.pkla  gpu_overclock.py  main.cpp
files/: hwmio.desktop
